@@ -43,6 +43,7 @@ QuitCommand::~QuitCommand()
 void QuitCommand::Execute(GXemul& gxemul, const vector<string>& arguments)
 {
 	gxemul.SetRunState(GXemul::Quitting);
+	gxemul.GetUI()->Shutdown();
 }
 
 
